parser/sysy.output
State 10 conflicts: 2 reduce/reduce
State 19 conflicts: 1 shift/reduce
State 27 conflicts: 4 reduce/reduce
State 30 conflicts: 14 shift/reduce, 1 reduce/reduce
State 31 conflicts: 1 shift/reduce
State 41 conflicts: 14 reduce/reduce
State 54 conflicts: 14 shift/reduce, 1 reduce/reduce
State 55 conflicts: 14 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID
   11       | ID Dim

   12 FuncDec: ID LP VarList RP
   13        | ID LP RP

   14 VarList: ParamDec
   15        | ParamDec COMMA VarList

   16 ParamDec: Specifier VarDec

   17 CompSt: LC DefList StmList RC

   18 StmList: /* empty */
   19        | Stmt StmList
   20        | DefList StmList

   21 Stmt: Exp SEMI
   22     | CompSt
   23     | RETURN Exp SEMI
   24     | RETURN SEMI
   25     | IF LP Exp RP Stmt
   26     | IF LP Exp RP Stmt ELSE Stmt
   27     | WHILE LP Exp RP Stmt
   28     | FOR LP Exp SEMI Exp SEMI Exp RP Stmt
   29     | FOR LP SEMI Exp SEMI Exp RP Stmt
   30     | FOR LP Exp SEMI SEMI Exp RP Stmt
   31     | FOR LP Exp SEMI Exp SEMI RP Stmt
   32     | FOR LP Exp SEMI SEMI RP Stmt
   33     | FOR LP SEMI Exp SEMI RP Stmt
   34     | FOR LP SEMI SEMI Exp RP Stmt
   35     | FOR LP SEMI SEMI RP Stmt
   36     | CONTINUE SEMI
   37     | BREAK SEMI

   38 DefList: /* empty */
   39        | Def DefList

   40 Def: Specifier DecList SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | Exp MOD Exp
   54    | Exp AUTOPLUS
   55    | Exp AUTOMINUS
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | ID
   62    | ID Dim
   63    | INT
   64    | FLOAT

   65 Args: Exp COMMA Args
   66     | Exp

   67 Dim: /* empty */
   68    | LB INT RB Dim
   69    | LB ID RB Dim


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 63 68
ID (259) 10 11 12 13 59 60 61 62 69
RELOP (260) 48
TYPE (261) 7
FLOAT (262) 64
LP (263) 12 13 25 26 27 28 29 30 31 32 33 34 35 56 59 60
RP (264) 12 13 25 26 27 28 29 30 31 32 33 34 35 56 59 60
LC (265) 17
RC (266) 17
LB (267) 68 69
RB (268) 68 69
SEMI (269) 4 6 21 23 24 28 29 30 31 32 33 34 35 36 37 40
COMMA (270) 9 15 42 65
AUTOPLUS (271) 54
AUTOMINUS (272) 55
PLUS (273) 49
MINUS (274) 50 57
STAR (275) 51
DIV (276) 52
MOD (277) 53
ASSIGNOP (278) 44 45
AND (279) 46
OR (280) 47
NOT (281) 58
IF (282) 25 26
ELSE (283) 26
FOR (284) 28 29 30 31 32 33 34 35
WHILE (285) 27
CONTINUE (286) 36
BREAK (287) 37
RETURN (288) 23 24
UMINUS (289)
LOWER_THEN_ELSE (290)


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
ExtDefList (38)
    on left: 2 3, on right: 1 3
ExtDef (39)
    on left: 4 5 6, on right: 3
Specifier (40)
    on left: 7, on right: 4 5 16 40
ExtDecList (41)
    on left: 8 9, on right: 4 9
VarDec (42)
    on left: 10 11, on right: 8 9 16 43 44
FuncDec (43)
    on left: 12 13, on right: 5
VarList (44)
    on left: 14 15, on right: 12 15
ParamDec (45)
    on left: 16, on right: 14 15
CompSt (46)
    on left: 17, on right: 5 22
StmList (47)
    on left: 18 19 20, on right: 17 19 20
Stmt (48)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37, on right:
    19 25 26 27 28 29 30 31 32 33 34 35
DefList (49)
    on left: 38 39, on right: 17 20 39
Def (50)
    on left: 40, on right: 39
DecList (51)
    on left: 41 42, on right: 40 42
Dec (52)
    on left: 43 44, on right: 41 42
Exp (53)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64, on right: 21 23 25 26 27 28 29 30 31 32 33 34 44 45 46 47
    48 49 50 51 52 53 54 55 56 57 58 65 66
Args (54)
    on left: 65 66, on right: 59 65
Dim (55)
    on left: 67 68 69, on right: 11 62 68 69


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   10 VarDec: ID .
   11       | ID . Dim
   12 FuncDec: ID . LP VarList RP
   13        | ID . LP RP

    LP  shift, and go to state 14
    LB  shift, and go to state 15

    SEMI      reduce using rule 10 (VarDec)
    SEMI      [reduce using rule 67 (Dim)]
    COMMA     reduce using rule 10 (VarDec)
    COMMA     [reduce using rule 67 (Dim)]
    $default  reduce using rule 10 (VarDec)

    Dim  go to state 16


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 17


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 18

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 19

    CompSt  go to state 20


state 14

   12 FuncDec: ID LP . VarList RP
   13        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 21

    Specifier  go to state 22
    VarList    go to state 23
    ParamDec   go to state 24


state 15

   68 Dim: LB . INT RB Dim
   69    | LB . ID RB Dim

    INT  shift, and go to state 25
    ID   shift, and go to state 26


state 16

   11 VarDec: ID Dim .

    $default  reduce using rule 11 (VarDec)


state 17

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 18

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 27

    ExtDecList  go to state 28
    VarDec      go to state 12


state 19

   17 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    TYPE      [reduce using rule 38 (DefList)]
    $default  reduce using rule 38 (DefList)

    Specifier  go to state 29
    DefList    go to state 30
    Def        go to state 31


state 20

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 21

   13 FuncDec: ID LP RP .

    $default  reduce using rule 13 (FuncDec)


state 22

   16 ParamDec: Specifier . VarDec

    ID  shift, and go to state 27

    VarDec  go to state 32


state 23

   12 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 33


state 24

   14 VarList: ParamDec .
   15        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 34

    $default  reduce using rule 14 (VarList)


state 25

   68 Dim: LB INT . RB Dim

    RB  shift, and go to state 35


state 26

   69 Dim: LB ID . RB Dim

    RB  shift, and go to state 36


state 27

   10 VarDec: ID .
   11       | ID . Dim

    LB  shift, and go to state 15

    RP        reduce using rule 10 (VarDec)
    RP        [reduce using rule 67 (Dim)]
    SEMI      reduce using rule 10 (VarDec)
    SEMI      [reduce using rule 67 (Dim)]
    COMMA     reduce using rule 10 (VarDec)
    COMMA     [reduce using rule 67 (Dim)]
    ASSIGNOP  reduce using rule 10 (VarDec)
    ASSIGNOP  [reduce using rule 67 (Dim)]
    $default  reduce using rule 10 (VarDec)

    Dim  go to state 16


state 28

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 29

   40 Def: Specifier . DecList SEMI

    ID  shift, and go to state 27

    VarDec   go to state 37
    DecList  go to state 38
    Dec      go to state 39


state 30

   17 CompSt: LC DefList . StmList RC

    INT       shift, and go to state 40
    ID        shift, and go to state 41
    TYPE      shift, and go to state 2
    FLOAT     shift, and go to state 42
    LP        shift, and go to state 43
    LC        shift, and go to state 19
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    IF        shift, and go to state 46
    FOR       shift, and go to state 47
    WHILE     shift, and go to state 48
    CONTINUE  shift, and go to state 49
    BREAK     shift, and go to state 50
    RETURN    shift, and go to state 51

    INT       [reduce using rule 38 (DefList)]
    ID        [reduce using rule 38 (DefList)]
    TYPE      [reduce using rule 38 (DefList)]
    FLOAT     [reduce using rule 38 (DefList)]
    LP        [reduce using rule 38 (DefList)]
    LC        [reduce using rule 38 (DefList)]
    RC        reduce using rule 18 (StmList)
    RC        [reduce using rule 38 (DefList)]
    MINUS     [reduce using rule 38 (DefList)]
    NOT       [reduce using rule 38 (DefList)]
    IF        [reduce using rule 38 (DefList)]
    FOR       [reduce using rule 38 (DefList)]
    WHILE     [reduce using rule 38 (DefList)]
    CONTINUE  [reduce using rule 38 (DefList)]
    BREAK     [reduce using rule 38 (DefList)]
    RETURN    [reduce using rule 38 (DefList)]
    $default  reduce using rule 18 (StmList)

    Specifier  go to state 29
    CompSt     go to state 52
    StmList    go to state 53
    Stmt       go to state 54
    DefList    go to state 55
    Def        go to state 31
    Exp        go to state 56


state 31

   39 DefList: Def . DefList

    TYPE  shift, and go to state 2

    TYPE      [reduce using rule 38 (DefList)]
    $default  reduce using rule 38 (DefList)

    Specifier  go to state 29
    DefList    go to state 57
    Def        go to state 31


state 32

   16 ParamDec: Specifier VarDec .

    $default  reduce using rule 16 (ParamDec)


state 33

   12 FuncDec: ID LP VarList RP .

    $default  reduce using rule 12 (FuncDec)


state 34

   15 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 22
    VarList    go to state 58
    ParamDec   go to state 24


state 35

   68 Dim: LB INT RB . Dim

    LB  shift, and go to state 15

    $default  reduce using rule 67 (Dim)

    Dim  go to state 59


state 36

   69 Dim: LB ID RB . Dim

    LB  shift, and go to state 15

    $default  reduce using rule 67 (Dim)

    Dim  go to state 60


state 37

   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 61

    $default  reduce using rule 43 (Dec)


state 38

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 62


state 39

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 41 (DecList)


state 40

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


state 41

   59 Exp: ID . LP Args RP
   60    | ID . LP RP
   61    | ID .
   62    | ID . Dim

    LP  shift, and go to state 64
    LB  shift, and go to state 15

    RELOP      reduce using rule 61 (Exp)
    RELOP      [reduce using rule 67 (Dim)]
    RP         reduce using rule 61 (Exp)
    RP         [reduce using rule 67 (Dim)]
    SEMI       reduce using rule 61 (Exp)
    SEMI       [reduce using rule 67 (Dim)]
    COMMA      reduce using rule 61 (Exp)
    COMMA      [reduce using rule 67 (Dim)]
    AUTOPLUS   reduce using rule 61 (Exp)
    AUTOPLUS   [reduce using rule 67 (Dim)]
    AUTOMINUS  reduce using rule 61 (Exp)
    AUTOMINUS  [reduce using rule 67 (Dim)]
    PLUS       reduce using rule 61 (Exp)
    PLUS       [reduce using rule 67 (Dim)]
    MINUS      reduce using rule 61 (Exp)
    MINUS      [reduce using rule 67 (Dim)]
    STAR       reduce using rule 61 (Exp)
    STAR       [reduce using rule 67 (Dim)]
    DIV        reduce using rule 61 (Exp)
    DIV        [reduce using rule 67 (Dim)]
    MOD        reduce using rule 61 (Exp)
    MOD        [reduce using rule 67 (Dim)]
    ASSIGNOP   reduce using rule 61 (Exp)
    ASSIGNOP   [reduce using rule 67 (Dim)]
    AND        reduce using rule 61 (Exp)
    AND        [reduce using rule 67 (Dim)]
    OR         reduce using rule 61 (Exp)
    OR         [reduce using rule 67 (Dim)]
    $default   reduce using rule 61 (Exp)

    Dim  go to state 65


state 42

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


state 43

   56 Exp: LP . Exp RP

    INT    shift, and go to state 40
    ID     shift, and go to state 41
    FLOAT  shift, and go to state 42
    LP     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 66


state 44

   57 Exp: MINUS . Exp

    INT    shift, and go to state 40
    ID     shift, and go to state 41
    FLOAT  shift, and go to state 42
    LP     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 67


state 45

   58 Exp: NOT . Exp

    INT    shift, and go to state 40
    ID     shift, and go to state 41
    FLOAT  shift, and go to state 42
    LP     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 68


state 46

   25 Stmt: IF . LP Exp RP Stmt
   26     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 69


state 47

   28 Stmt: FOR . LP Exp SEMI Exp SEMI Exp RP Stmt
   29     | FOR . LP SEMI Exp SEMI Exp RP Stmt
   30     | FOR . LP Exp SEMI SEMI Exp RP Stmt
   31     | FOR . LP Exp SEMI Exp SEMI RP Stmt
   32     | FOR . LP Exp SEMI SEMI RP Stmt
   33     | FOR . LP SEMI Exp SEMI RP Stmt
   34     | FOR . LP SEMI SEMI Exp RP Stmt
   35     | FOR . LP SEMI SEMI RP Stmt

    LP  shift, and go to state 70


state 48

   27 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 71


state 49

   36 Stmt: CONTINUE . SEMI

    SEMI  shift, and go to state 72


state 50

   37 Stmt: BREAK . SEMI

    SEMI  shift, and go to state 73


state 51

   23 Stmt: RETURN . Exp SEMI
   24     | RETURN . SEMI

    INT    shift, and go to state 40
    ID     shift, and go to state 41
    FLOAT  shift, and go to state 42
    LP     shift, and go to state 43
    SEMI   shift, and go to state 74
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 75


state 52

   22 Stmt: CompSt .

    $default  reduce using rule 22 (Stmt)


state 53

   17 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 76


state 54

   19 StmList: Stmt . StmList

    INT       shift, and go to state 40
    ID        shift, and go to state 41
    TYPE      shift, and go to state 2
    FLOAT     shift, and go to state 42
    LP        shift, and go to state 43
    LC        shift, and go to state 19
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    IF        shift, and go to state 46
    FOR       shift, and go to state 47
    WHILE     shift, and go to state 48
    CONTINUE  shift, and go to state 49
    BREAK     shift, and go to state 50
    RETURN    shift, and go to state 51

    INT       [reduce using rule 38 (DefList)]
    ID        [reduce using rule 38 (DefList)]
    TYPE      [reduce using rule 38 (DefList)]
    FLOAT     [reduce using rule 38 (DefList)]
    LP        [reduce using rule 38 (DefList)]
    LC        [reduce using rule 38 (DefList)]
    RC        reduce using rule 18 (StmList)
    RC        [reduce using rule 38 (DefList)]
    MINUS     [reduce using rule 38 (DefList)]
    NOT       [reduce using rule 38 (DefList)]
    IF        [reduce using rule 38 (DefList)]
    FOR       [reduce using rule 38 (DefList)]
    WHILE     [reduce using rule 38 (DefList)]
    CONTINUE  [reduce using rule 38 (DefList)]
    BREAK     [reduce using rule 38 (DefList)]
    RETURN    [reduce using rule 38 (DefList)]
    $default  reduce using rule 18 (StmList)

    Specifier  go to state 29
    CompSt     go to state 52
    StmList    go to state 77
    Stmt       go to state 54
    DefList    go to state 55
    Def        go to state 31
    Exp        go to state 56


state 55

   20 StmList: DefList . StmList

    INT       shift, and go to state 40
    ID        shift, and go to state 41
    TYPE      shift, and go to state 2
    FLOAT     shift, and go to state 42
    LP        shift, and go to state 43
    LC        shift, and go to state 19
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    IF        shift, and go to state 46
    FOR       shift, and go to state 47
    WHILE     shift, and go to state 48
    CONTINUE  shift, and go to state 49
    BREAK     shift, and go to state 50
    RETURN    shift, and go to state 51

    INT       [reduce using rule 38 (DefList)]
    ID        [reduce using rule 38 (DefList)]
    TYPE      [reduce using rule 38 (DefList)]
    FLOAT     [reduce using rule 38 (DefList)]
    LP        [reduce using rule 38 (DefList)]
    LC        [reduce using rule 38 (DefList)]
    RC        reduce using rule 18 (StmList)
    RC        [reduce using rule 38 (DefList)]
    MINUS     [reduce using rule 38 (DefList)]
    NOT       [reduce using rule 38 (DefList)]
    IF        [reduce using rule 38 (DefList)]
    FOR       [reduce using rule 38 (DefList)]
    WHILE     [reduce using rule 38 (DefList)]
    CONTINUE  [reduce using rule 38 (DefList)]
    BREAK     [reduce using rule 38 (DefList)]
    RETURN    [reduce using rule 38 (DefList)]
    $default  reduce using rule 18 (StmList)

    Specifier  go to state 29
    CompSt     go to state 52
    StmList    go to state 78
    Stmt       go to state 54
    DefList    go to state 55
    Def        go to state 31
    Exp        go to state 56


state 56

   21 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | Exp . MOD Exp
   54    | Exp . AUTOPLUS
   55    | Exp . AUTOMINUS

    RELOP      shift, and go to state 79
    SEMI       shift, and go to state 80
    AUTOPLUS   shift, and go to state 81
    AUTOMINUS  shift, and go to state 82
    PLUS       shift, and go to state 83
    MINUS      shift, and go to state 84
    STAR       shift, and go to state 85
    DIV        shift, and go to state 86
    MOD        shift, and go to state 87
    ASSIGNOP   shift, and go to state 88
    AND        shift, and go to state 89
    OR         shift, and go to state 90


state 57

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


state 58

   15 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 15 (VarList)


state 59

   68 Dim: LB INT RB Dim .

    $default  reduce using rule 68 (Dim)


state 60

